# photo_sort

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml  requirements.txt
src/: cli.py  config.py  detector.py  exif_reader.py  gui.py  model_store.py  sorter.py
tests/: test_sorter.py
